--- a/mylittlego/gui.kv
+++ b/mylittlego/gui.kv
@@ -1,3 +1,12 @@
 #:kivy 1.11.0
+<MyButton@Button>:
+    color: .8,.9,0,1
+    font_size: 32
+    size: 100, 50
+
+<MyLittleGoGui>
+    Button:
+        text: 'Hello World!'
+        pos: root.x, root.top - self.height      
 
 
